--- a/index.html
+++ b/index.html
@@ -110,13 +110,12 @@
             </table>
     
             <div class="Skills"><h4 id="skills"><b>Skills</b></h4>
-                <div class="skills-grid">
-                    <div class="skill-item">Lorem</div>
-                    <div class="skill-item">Ipsum</div>
-                    <div class="skill-item">Sodales</div>
-                    <div class="skill-item">Placerat</div>
-                    <div class="skill-item important-skill">Primis</div>
-                    <div class="skill-item">Auctor</div>
+                <div class="skills-controls">
+                    <input type="text" id="skillInput" placeholder="Enter a new skill" />
+                    <button id="addSkillButton">Add Skill</button>
+                </div>
+                <div class="skills-grid" id="skillsList">
+                    
                 </div>
             </div>
         </div>
@@ -131,6 +130,7 @@
             <h3><u>Resume Download</u></h3>
             <p><a href="https://docs.google.com/document/d/11sPFYTRJN0mRI5Gq4hOZ1T03EWebqYIok2RPYlV_QVU/edit?usp=drive_link"  class="download-btn" download>Resume</a></p></div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="app.js"></script>
     </body>
 
